--- a/index.html
+++ b/index.html
@@ -238,84 +238,149 @@
                     </li>
                 </ul>
                 <hr>
-                <h1>Facebook11</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
+                <h1>Your Shortcut</h1>
+                <ul class="left-side-data">
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside "
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                </ul>
+
             </div>
             <div class="right-side">
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
+                <ul class="left-side-data">
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/fb1.png" class="header-left__photo header-left__photo-leftside "
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="https://play-lh.googleusercontent.com/C9CAt9tZr8SSi4zKCxhQc9v4I6AOTqRmnLchsu1wVDQL0gsQ3fmbCVgQmOVM1zPru8UH"
+                                class="header-left__photo header-left__photo-leftside" alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/fb3.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/fb4.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaVsz5XxXumgiQEBHiIP-BmYZUDYLKDnH16A&usqp=CAU"
+                                class="header-left__photo header-left__photo-leftside" alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+
+                </ul>
+
             </div>
         </div>
     </div>
