--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </li>
                 </ul>
                 <hr>
-                <h1>Your Shortcut</h1>
+                <h1 class="h1 h1-1">Your Shortcut</h1>
                 <ul class="left-side-data">
                     <li class="left-side-input">
                         <div class="left-side-input-2">
@@ -250,8 +250,76 @@
                 </ul>
 
             </div>
+
+            <div class="mid">
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+                <h1>Facebook</h1>
+            </div>
+
             <div class="right-side">
                 <ul class="left-side-data">
+                    <div class="left-side-nav">
+                        <h1 class="h1">Contacts</h1>
+                        <div class="left-side-nav__icon-box">
+                            <svg class="left-side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-cart"></use>
+                            </svg>
+                            <!-- <span class="header-left__notification">5+</span> -->
+                        </div>
+                        <div class="left-side-nav__icon-box">
+                            <svg class="left-side-nav__icon">
+                                <use xlink:href="img/sprite.svg#icon-cart"></use>
+                            </svg>
+                            <!-- <span class="header-left__notification">5+</span> -->
+                        </div>
+                    </div>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
                             <img src="img/fb1.png" class="header-left__photo header-left__photo-leftside "
@@ -261,8 +329,8 @@
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="https://play-lh.googleusercontent.com/C9CAt9tZr8SSi4zKCxhQc9v4I6AOTqRmnLchsu1wVDQL0gsQ3fmbCVgQmOVM1zPru8UH"
-                                class="header-left__photo header-left__photo-leftside" alt="User Photo">
+                            <img src="img/fb2.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
@@ -282,105 +350,128 @@
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaVsz5XxXumgiQEBHiIP-BmYZUDYLKDnH16A&usqp=CAU"
-                                class="header-left__photo header-left__photo-leftside" alt="User Photo">
-                            <label class="left-side-input-data" for="type">DS Facebook</label>
-                        </div>
-                    </li>
-                    <li class="left-side-input">
-                        <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb5.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb6.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb7.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb8.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb9.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb10.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb2.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb7.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb10.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb3.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb8.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb5.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
                     <li class="left-side-input">
                         <div class="left-side-input-2">
-                            <img src="img/user.jpg" class="header-left__photo header-left__photo-leftside"
+                            <img src="img/fb4.jpg" class="header-left__photo header-left__photo-leftside"
                                 alt="User Photo">
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
-
+                    <li class="left-side-input">
+                        <div class="left-side-input-2">
+                            <img src="img/fb6.jpg" class="header-left__photo header-left__photo-leftside"
+                                alt="User Photo">
+                            <label class="left-side-input-data" for="type">DS Facebook</label>
+                        </div>
+                    </li>
+                    <hr>
+                    <h1 class="h1 h1-1">Group Conversation</h1>
+                    <ul class="left-side-data">
+                        <li class="left-side-input">
+                            <div class="left-side-input-2">
+                                <img src="img/fb4.jpg" class="header-left__photo header-left__photo-leftside"
+                                    alt="User Photo">
+                                <label class="left-side-input-data" for="type">DS Facebook</label>
+                            </div>
+                        </li>
+                        <li class="left-side-input">
+                            <div class="left-side-input-2">
+                                <img src="img/fb3.jpg" class="header-left__photo header-left__photo-leftside"
+                                    alt="User Photo">
+                                <label class="left-side-input-data" for="type">DS Facebook</label>
+                            </div>
+                        </li>
+                        <li class="left-side-input">
+                            <div class="left-side-input-2">
+                                <img src="img/plus.png" class="header-left__photo header-left__photo-leftside"
+                                    alt="User Photo">
+                                <label class="left-side-input-data" for="type">Creat new group</label>
+                            </div>
+                        </li>
+                    </ul>
                 </ul>
-
             </div>
         </div>
     </div>
