--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class=" header sub-header">
                 <li class="sub-header__item  sub-header__item--active">
                     <a href="#" class="sub-header__link">
-                        <svg class="sub-header__icon">
+                        <svg class="sub-header__icon sub-header__icon-1">
                             <use xlink:href="img/sprite.svg#icon-home"></use>
                         </svg>
                     </a>
@@ -252,6 +252,21 @@
             </div>
 
             <div class="mid">
+                <div class="mid-1">
+                    <div class="mid-2">
+                        <img class="imag" src="img/profile.png" alt="">
+                        <!-- <img class="imag" src="img/user.jpg" alt=""> -->
+                    </div>
+                    <div class="mid-2">
+                        <img class="imag" src="img/HP.jpg" alt="">
+                    </div>
+                    <div class="mid-2">
+                        <img class="imag" src="img/HP2.jpg" alt="">
+                    </div>
+                    <div class="mid-2">
+                        <img class="imag" src="img/user.jpg" alt="">
+                    </div>
+                </div>
                 <h1>Facebook</h1>
                 <h1>Facebook</h1>
                 <h1>Facebook</h1>
@@ -309,7 +324,7 @@
                         <h1 class="h1">Contacts</h1>
                         <div class="left-side-nav__icon-box">
                             <svg class="left-side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-cart"></use>
+                                <use xlink:href="img/sprite.svg#icon-user"></use>
                             </svg>
                             <!-- <span class="header-left__notification">5+</span> -->
                         </div>
