--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
                     </li>
                 </ul>
-                <hr>
+                <hr style="width: 90%;">
                 <h1 class="h1 h1-1">Your Shortcut</h1>
                 <ul class="left-side-data">
                     <li class="left-side-input">
@@ -253,40 +253,121 @@
 
             <div class="mid">
                 <div class="mid-1">
-                    <div class="mid-2">
-                        <img class="imag" src="img/profile.png" alt="">
-                        <!-- <img class="imag" src="img/user.jpg" alt=""> -->
-                    </div>
-                    <div class="mid-2">
-                        <img class="imag" src="img/HP.jpg" alt="">
-                    </div>
-                    <div class="mid-2">
-                        <img class="imag" src="img/HP2.jpg" alt="">
-                    </div>
-                    <div class="mid-2">
-                        <img class="imag" src="img/user.jpg" alt="">
+                    <div style="padding: .8rem 0;">
+                        <div style="padding: .8rem 0;
+                                    display: flex;        
+		                            flex-direction: row;
+                                    gap: 1rem;">
+                            <div class="mid-1-input">
+                                <img class="imag" src="img/profile.png" alt="">
+                                <!-- <img class="imag" src="img/user.jpg" alt=""> -->
+                            </div>
+                            <div class="mid-1-input">
+                                <img class="imag" src="img/HP.jpg" alt="">
+                            </div>
+                            <div class="mid-1-input">
+                                <img class="imag" src="img/HP2.jpg" alt="">
+                            </div>
+                            <div class="mid-1-input">
+                                <img class="imag" src="img/user.jpg" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
-                <h1>Facebook</h1>
+                <div class="mid-2">
+                    <div class="mid-2-input">
+                        <div class="mid-2-input-1">
+                            <img src="img/fb1.png" class="mid-2-input-1__photo mid-2-input-1__photo-fb"
+                                alt="User Photo">
+                            <form action="#" class="mid-2-input-1__search">
+                                <input type="text" class="mid-2-input-1__search__input" placeholder="Search Engine">
+                            </form>
+                        </div>
+                        <!-- <hr> -->
+                        <div class="comment">
+                            <ul class=" comment-1">
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-product"></use>
+                                        </svg>
+                                        <span>Live video</span>
+                                    </a>
+                                </li>
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-user"></use>
+                                        </svg>
+                                        <span>Photo/video</span>
+                                    </a>
+                                </li>
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-heart"></use>
+                                        </svg>
+                                        <span>Feeling/activity</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="mid-2-input">
+                        <div class="mid-2-input-1">
+                            <img src="img/fb1.png" class="mid-2-input-1__photo mid-2-input-1__photo-fb"
+                                alt="User Photo">
+                            <div><label class="left-side-input-data-mid" for="type">
+                                    <p class="left-side-input-data-mid-data">Ali Husnain</p>
+
+                                </label>
+                                <p class="left-side-input-data-mid-data-below">january 10 at 10 51 PM</p>
+                            </div>
+                        </div>
+                        <div class="mid-2-input-pic">
+                            <img src="/img/profile.png" alt="">
+                        </div>
+                        <div class="comment">
+                            <ul class=" comment-1">
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-product"></use>
+                                        </svg>
+                                        <span>Like</span>
+                                    </a>
+                                </li>
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-user"></use>
+                                        </svg>
+                                        <span>Comment</span>
+                                    </a>
+                                </li>
+                                <li class="comment-1__item ">
+                                    <a href="#" class="comment-1__link">
+                                        <svg class="comment-1__icon">
+                                            <use xlink:href="img/sprite.svg#icon-heart"></use>
+                                        </svg>
+                                        <span>Share</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="mid-2-input-1">
+                            <img src="img/fb1.png" class="mid-2-input-1__photo mid-2-input-1__photo-fb"
+                                alt="User Photo">
+                            <form action="#" class="mid-2-input-1__search">
+                                <input type="text" class="mid-2-input-1__search__input" placeholder="Search Engine">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="mid-3">
+
+                </div>
+
                 <h1>Facebook</h1>
                 <h1>Facebook</h1>
                 <h1>Facebook</h1>
@@ -461,7 +542,7 @@
                             <label class="left-side-input-data" for="type">DS Facebook</label>
                         </div>
                     </li>
-                    <hr>
+                    <hr style="width: 90%;">
                     <h1 class="h1 h1-1">Group Conversation</h1>
                     <ul class="left-side-data">
                         <li class="left-side-input">
